@@ -11,9 +11,9 @@
   <object class="GtkGrid" id="res-grid">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
+    <property name="orientation">vertical</property>
     <property name="row_spacing">12</property>
     <property name="column_spacing">6</property>
-    <property name="orientation">vertical</property>
     <child>
       <object class="GtkCheckButton" id="transparent-btn">
         <property name="label" translatable="yes">Tr_ansparent background</property>
@@ -59,6 +59,18 @@
       </object>
       <packing>
         <property name="left_attach">1</property>
+        <property name="top_attach">0</property>
+        <property name="width">1</property>
+        <property name="height">1</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkLabel" id="screen-lbl">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+      </object>
+      <packing>
+        <property name="left_attach">2</property>
         <property name="top_attach">0</property>
         <property name="width">1</property>
         <property name="height">1</property>
